Adding Lab2 Problem2

--- a/Labs/Lab1a.ipynb
+++ b/Labs/Lab1a.ipynb
@@ -7,7 +7,7 @@
     "# Lab 1, Problem 1 - Machine Learning for Industry\n",
     "Linköping University, Fall 2019.\n",
     "\n",
-    "Author: Mattias Villan, Linköping and Stockholm University, http://mattiasvillani.com"
+    "Author: Mattias Villani, Linköping and Stockholm University, http://mattiasvillani.com"
    ]
   },
   {
