Update MLoptimization extra

--- a/Extras/MLEbyOptimization.ipynb
+++ b/Extras/MLEbyOptimization.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Numerical optimization for Maximum Likelihood estimation\n",
-    "### Author: Mattias Villani, http://mattiasvillani.com"
+    "#### Author: Mattias Villani, http://mattiasvillani.com"
    ]
   },
   {
@@ -344,14 +344,18 @@
    "metadata": {},
    "source": [
     "Logistic regression model:\n",
+    "\n",
     "$$\n",
     "\\mathrm{Pr}(Y = y \\vert \\mathbf{x}) = \\frac{(\\exp (\\mathbf{x}^\\top \\mathbf{w}))^y}{1 + \\exp (\\mathbf{x}^\\top \\mathbf{w})}\\text{ for }y \\in  \\{0,1\\}\n",
     "$$\n",
+    "\n",
     "and so the likelihood for a sample of independent data $(y_1,\\mathbf{x}_1),\\ldots,(y_n,\\mathbf{x}_n)$ is\n",
+    "\n",
     "$$\n",
     "p(y_1,\\ldots,y_n\\vert \\mathbf{w}) =  \\prod_{i=1}^n \\frac{(\\exp (\\mathbf{x}_i^\\top \\mathbf{w}))^{y_i}}{1 + \\exp (\\mathbf{x}_i^\\top \\mathbf{w})}\n",
     "$$\n",
     "and the log-likelihood\n",
+    "\n",
     "$$\n",
     "\\log p(y_1,\\ldots,y_n\\vert \\mathbf{w}) =  \\sum_{i=1}^n y_i \\mathbf{x}_i^\\top \\mathbf{w}\n",
     "                                          - \\sum_{i=1}^n \\log \\big(1 + \\exp (\\mathbf{x}_i^\\top \\mathbf{w})\\big)\n",
