--- a/Labs/Lab4JMP.ipynb
+++ b/Labs/Lab4JMP.ipynb
@@ -421,7 +421,7 @@
     "    Args:\n",
     "        q_table: Q-table to update Q-values in\n",
     "        reward_map: matrix containing the reward for each state in the state space\n",
-    "        exploration_policy: policy class implementing an act-method to be used for exploring the state space\n",
+    "        exploration_policy: object of the policy class implementing an act-method to be used for exploring the state space\n",
     "        start_state: numpy array with two entries, describing the starting position of the agent\n",
     "        alpha (optional): learning rate\n",
     "        gamma (optional): discount factor\n",
