--- a/Labs/Lab4JMP.ipynb
+++ b/Labs/Lab4JMP.ipynb
@@ -695,7 +695,7 @@
     "This results in a trajectory, a sequence of states, actions and rewards on the form $S_0, A_0, R_1, S_1, \\dots, S_{T-1}, A_{T-1}, R_T$.\n",
     "Gradient ascent is then performed using the update rule\n",
     "$$\n",
-    "\\theta \\leftarrow \\theta + \\alpha G_t \\nabla_\\theta \\ln(\\pi(A_t |S_t, \\theta))\n",
+    "\\theta \\leftarrow \\theta + \\alpha \\gamma^t G_t \\nabla_\\theta \\ln(\\pi(A_t |S_t, \\theta))\n",
     "$$\n",
     "for each $t = 0, 1, \\dots, T-1$, where $\\alpha$ is the learning rate.\n",
     "Note that all future rewards are needed to compute $G_t$, so the entire episode has to be completed before any gradient ascent step can be taken.\n",
@@ -710,7 +710,7 @@
     "* Using a cross-entropy loss $L(y, \\hat{y}) = - \\sum_i y_i \\ln(\\hat{y}_i)$\n",
     "* Letting $y$ be a vector with 1 at the position corresponding to $A_t$ and zero everywhere else (\"one-hot\"-encoded).\n",
     "* Feeding $S_t$ as input to the network.\n",
-    "* Setting the sample weight $w = G_t$.\n",
+    "* Setting the sample weight $w = \\gamma^t G_t$.\n",
     "\n",
     "Keeping in mind that the network outputs $\\hat{y}_a = \\pi(a | S_t, \\theta)$, the choices above result in the network being trained with the REINFORCE update rule (insert the values into the stochastic gradient descent formulation to see this).\n",
     "To speed up the computation we will also use batch gradient descent instead of training on each state-action pair individually.\n",
